update tests and swagger openapi
